# Tesseract

./: .gitignore  Cargo.toml  README.md
packaging/: build-deb.sh  com.jegly.tesseract.desktop  com.jegly.tesseract.metainfo.xml  com.jegly.tesseract.policy  install.sh  tesseract-agent.service
tesseract-agent/: Cargo.toml
tesseract-agent/src/: main.rs  watch.rs
tesseract-agent/src/dataplane/: fuse.rs  mod.rs  ublk.rs  udisks.rs
tesseract-agent/src/ipc/: mod.rs
tesseract-agent/src/os/: harden.rs  mod.rs  secmem.rs
tesseract-agent/src/service/: benchmark.rs  convert.rs  fido2.rs  fileops.rs  inplace_io.rs  keyslots.rs  mod.rs  volume.rs
tesseract-cli/: Cargo.toml
tesseract-cli/src/: main.rs
tesseract-core/: Cargo.toml
tesseract-core/src/: aeadx.rs  cascade.rs  cipher_layer.rs  entropy.rs  error.rs  filemode.rs  header.rs  hpke.rs  inplace.rs  kdf.rs  kem.rs  keyfile.rs  keyslot.rs  kmac.rs  lib.rs  registry.rs  secret.rs  sign.rs  statemachine.rs
tesseract-fuzz/: Cargo.toml  README.md
tesseract-fuzz/fuzz_targets/: deniable_open.rs  file_header.rs  header_parser.rs  ipc_framer.rs  keyslot_decoder.rs
tesseract-gui/: Cargo.toml
tesseract-gui/src/: agentlink.rs  applock.rs  archive.rs  config.rs  dialogs.rs  filedialogs.rs  fonts.rs  main.rs  settings_ui.rs  theme.rs  widgets.rs
tesseract-mountd/: Cargo.toml
tesseract-mountd/src/: main.rs
tesseract-proto/: Cargo.toml
tesseract-proto/src/: client.rs  lib.rs
