[workspace]
resolver = "2"
members = [
    "tesseract-core",
    "tesseract-proto",
    "tesseract-agent",
    "tesseract-cli",
    "tesseract-gui",
    "tesseract-mountd",
]
# tesseract-fuzz is intentionally not a member: cargo-fuzz manages it separately
# (requires nightly). See tesseract-fuzz/README.md.

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["jegly <jjjegly@gmail.com>"]
repository = "https://github.com/jegly/Tesseract"

[workspace.dependencies]
tesseract-core = { path = "tesseract-core" }
tesseract-proto = { path = "tesseract-proto" }

# crypto: symmetric
aes = "0.9"
serpent = "0.6"
twofish = "0.8"
camellia = "0.2"
sm4 = "0.6"
aria = "0.2"
kuznyechik = "0.9"
threefish = "0.6"
chacha20 = { version = "0.10", features = ["xchacha", "zeroize"] }
xts-mode = "0.6"
cipher = "0.5"
adiantum = "0.2"

# crypto: AEAD
chacha20poly1305 = "0.10"
aes-gcm-siv = "0.11"
aes-gcm = "0.10"

# crypto: hash / MAC / KDF
sha2 = "0.11"
sha3 = "0.12"
blake3 = "1.8"
blake2 = "0.10"
whirlpool = "0.11"
streebog = "0.11"
hkdf = "0.13"
hmac = "0.13"
digest = "0.11"
argon2 = "0.5"
scrypt = { version = "0.12", default-features = false }
pbkdf2 = { version = "0.13", default-features = false }
balloon-hash = "0.4"
tiny-keccak = { version = "2.0", features = ["kmac"] }

# crypto: asymmetric / PQ
ml-kem = { version = "0.3", features = ["hazmat"] }
ml-dsa = "0.1"
x25519-dalek = { version = "2.0", features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "2.2", features = ["zeroize", "rand_core"] }

# crypto: support
subtle = "2.6"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
rand_core = "0.6"
rand = "0.8"
getrandom = "0.2"
constant_time_eq = "0.3"

# encoding
minicbor = { version = "2.2", features = ["derive", "alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"
toml = "0.8"

# OS / system
rustix = { version = "1.1", features = ["fs", "net", "process", "mm", "param", "pipe", "event", "thread"] }
libc = "0.2"
landlock = "0.4"
seccompiler = "0.5"
fuser = "0.17"
zbus = "5"
sd-notify = "0.4"
nix = { version = "0.30", features = ["socket", "uio", "mount", "fs", "user"] }

# app
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
dirs = "6"

# gui
gtk4 = { version = "0.11", package = "gtk4", features = ["v4_18"] }
libadwaita = { version = "0.9", features = ["v1_7"] }
relm4 = { version = "0.11", features = ["libadwaita"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev.package."*"]
# crypto is unusably slow at opt-level 0
opt-level = 2
