[package]
name = "tesseract-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tesseract key agent: holds all key material in locked memory, performs all crypto."

[features]
default = ["fuse", "fido2", "experimental"]
fuse = ["dep:fuser"]
ublk = []
experimental = ["tesseract-core/experimental"]
fido2 = ["dep:ctap-hid-fido2"]

[dependencies]
tesseract-core = { workspace = true }
tesseract-proto = { workspace = true }
rustix = { workspace = true }
libc = { workspace = true }
landlock = { workspace = true }
seccompiler = { workspace = true }
fuser = { workspace = true, optional = true }
zbus = { workspace = true }
sd-notify = { workspace = true }
zeroize = { workspace = true }
getrandom = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
minicbor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
ctap-hid-fido2 = { version = "3.5", optional = true }

[dev-dependencies]
tempfile = "3"
